--- a/Section02_JS_Fundamentals/Lecture12_Array_ArrayMethods/index.html
+++ b/Section02_JS_Fundamentals/Lecture12_Array_ArrayMethods/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Javascript Sandbox : Section 12  Array and Array Methods</h1>
-    <script src="./app.js"></script>
+    <script src="./app0.js"></script>
     <!-- <ul>
         <li>Name: </li>
         <li>Age: </li>
